# 1C_FAR

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.ru.md  build.rs  build_num.txt  build_release.ps1  build_release.sh  install_linux.sh  rust-toolchain.toml
.github/workflows/: ci.yml
docs/1C/: bytecode.md  formats.md  processing.md
docs/FAR3_PluginSDK/: plugin.hpp
docs/FAR_PluginSDK_Headers/: farcolor.hpp
docs/project/: DEVELOPMENT_GUIDELINES.md  architecture_v2.md  concept.md  crossplatform.md  plan.md  scope.md  srs.md
src/: lib.rs
src/base/: deflate.rs  mod.rs  parser.rs  reader.rs
src/far/: api.rs  lang.rs  mod.rs  panels.rs  settings.rs  string_utils.rs  traits.rs  ui.rs
src/far/far2/: api.rs  exports.rs  mod.rs
src/far/far3/: api.rs  exports.rs  mod.rs
src/v8/: container.rs  mod.rs  tests.rs  uuids.rs  vfs_builder.rs  writer.rs
src/v8_artifacts/: cf.rs  container.rs  integration_tests.rs  mod.rs  tests.rs  uuids.rs  vfs_builder.rs  writer.rs
tests/cf/: 1Cv8.cf
tests/cfe/: Ext1.cfe
tests/epf/: edit_module.epf  protected.epf  simple.epf  with_form.epf
tests/erf/: simple.erf
