[package]
name = "far1c"
version = "0.2.6"
description = "FAR Manager plugin for 1C:Enterprise artifacts"
authors = ["Dmitry Kinash <dv.kinash@gmail.com>"]
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
flate2 = "1.0"
encoding_rs = "0.8"
uuid = { version = "1.3", features = ["v4"] }
widestring = "1.0"
log = "0.4"
windebug_logger = "0.1"
simple_logger = "4.0"
chrono = "0.4.44"
