[package]
name = "far1c"
version = "0.3.3"
description = "FAR Manager plugin for 1C:Enterprise artifacts (.epf, .erf, .cf, .cfe, .1cd)"
authors = ["Dmitry Kinash <dv.kinash@gmail.com>"]
edition = "2021"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/DementorAK/far1c"
readme = "README.md"
keywords = ["far-manager", "1c-enterprise", "plugin", "virtual-filesystem"]
categories = ["filesystem", "development-tools"]
build = "build.rs"


[lib]
crate-type = ["cdylib"]

[dependencies]
flate2 = "1.0"
encoding_rs = "0.8"
uuid = { version = "1.3", features = ["v4"] }
widestring = "1.0"
log = "0.4"
windebug_logger = "0.1"
simple_logger = "4.0"
chrono = "0.4.44"
